# Karuna-AI

./: .gitignore  README.md  deploy.sh
backend/app/: .env.example  main.py  patch.py  pyproject.toml  requirements.txt
backend/app/agents/: baseline_agent.py  handshake.py  listener_agent.py  memory_ingest.py  memory_query.py  run_analysis.py
backend/app/agents/prompts/: listener-curiosity.md  listener-emotional-match.md  listener-image-quality.md  listener-rubric.md  memory-ingest.md
backend/app/karuna_agent/: __init__.py  agent.py
backend/app/knowledge-base/: kb-01-karuna-philosophy.txt  kb-02-karuna-patterns.txt
backend/app/static/: index.html
backend/app/static/css/: style.css
backend/app/static/js/: ambient.js  app.js  karuna-orb.js
backend/app/tools/: blessing_tools.py  passage_tools.py
docs/: architecture.md
knowledge-base/: kb-03-karuna-antipatterns.txt  kb-04-boundaries-and-safety.txt  kb-05-cultural-wisdom.txt
